# AI-ML

./: CBOW.ipynb  Decision_Tree_Algorthim.ipynb  Hyperparameter.ipynb  Naïve_Bayes.ipynb  Preprocessing_Example.ipynb  README.md  Sushma_SentimentAnalysis.ipynb  app.py  pyproject.toml  style.css
sample_data/: marketing_data.csv  review_data.csv  sales_data.csv
utils/: advanced_analytics.py  auth.py  data_processor.py  gemini_analytics.py  predictions.py  visualizations.py
