[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "google-generativeai",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "openai>=1.61.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.0.0",
    "streamlit>=1.42.0",
    "textblob>=0.19.0",
    "xgboost>=2.1.3",
]
